--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "dependencies": {
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "react-id-swiper": "^4.0.0",
+    "styled-components": "^5.2.0",
+    "swiper": "^6.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.3"
   }
 }
