--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-id-swiper": "^4.0.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "swiper": "^6.3.3"
   },
