--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "next": "9.5.5",
+    "next-pwa": "^3.1.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-id-swiper": "^4.0.0",
