--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,78 +2,50 @@
 	"short_name": "afrilearn",
 	"name": "Afrilearn",
 	"lang": "en",
-	"description": "e learnini platform",
+	"description": "e learning platform",
 	"background_color": "#2bb58e",
 	"theme_color": "#2bb58e",
 	"dir": "ltr",
 	"display": "standalone",
+	"start_url": ".",
 	"orientation": "any",
 	"icons": [
 		{
-			"src": "/android-icon-192x192-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "192x192"
+		 "src": "\/android-icon-36x36.png",
+		 "sizes": "36x36",
+		 "type": "image\/png",
+		 "density": "0.75"
 		},
 		{
-			"src": "/apple-icon-180x180-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "180x180"
+		 "src": "\/android-icon-48x48.png",
+		 "sizes": "48x48",
+		 "type": "image\/png",
+		 "density": "1.0"
 		},
 		{
-			"src": "/apple-icon-152x152-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "152x152"
+		 "src": "\/android-icon-72x72.png",
+		 "sizes": "72x72",
+		 "type": "image\/png",
+		 "density": "1.5"
 		},
 		{
-			"src": "/apple-icon-144x144-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "144x144"
+		 "src": "\/android-icon-96x96.png",
+		 "sizes": "96x96",
+		 "type": "image\/png",
+		 "density": "2.0"
 		},
 		{
-			"src": "/apple-icon-120x120-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "120x120"
+		 "src": "\/android-icon-144x144.png",
+		 "sizes": "144x144",
+		 "type": "image\/png",
+		 "density": "3.0"
 		},
 		{
-			"src": "/apple-icon-114x114-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "114x114"
-		},
-		{
-			"src": "/favicon-96x96-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "96x96"
-		},
-		{
-			"src": "/apple-icon-76x76-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "76x76"
-		},
-		{
-			"src": "/apple-icon-72x72-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "72x72"
-		},
-		{
-			"src": "/apple-icon-60x60-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "60x60"
-		},
-		{
-			"src": "/apple-icon-57x57-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "57x57"
-		},
-		{
-			"src": "/favicon-32x32-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "32x32"
-		},
-		{
-			"src": "/favicon-16x16-dunplab-manifest-18217.png",
-			"type": "image/png",
-			"sizes": "16x16"
+		 "src": "\/android-icon-192x192.png",
+		 "sizes": "192x192",
+		 "type": "image\/png",
+		 "density": "4.0"
 		}
-	],
-	"prefer_related_applications": "false"
+	   ],
+	"prefer_related_applications": false
 }
